feat: Phase 11 Task 2 COMPLETE - Export keyword specification
Added comprehensive 400+ line specification for export system.

**Design Principles**:
- Explicit over implicit (must use 'export' keyword)
- JavaScript compatibility (maps to ES6 export)
- Simplicity (one keyword, clear semantics)
- Consistency (works same for all item types)

**Syntax Specification**:
- export fn, export struct, export enum, export const
- Private by default (without export keyword)
- Re-export syntax (export use ./module)

**Grammar Rules**:
- Lexer: Add Export token
- Parser: Parse export modifier before items
- AST: Add exported: bool field to all definitions

**Module Resolution**:
- Local files: ./file, ../parent, ./subdir/file
- Packages: jounce_http::Symbol (existing)
- Resolution algorithm documented

**JavaScript Generation**:
- export fn → export function
- export struct → export class
- export enum → export const
- Private items: no export keyword

**Examples**:
- Simple module with public/private functions
- Components module with re-exports
- Mixed imports (packages + local files)

**Edge Cases Handled**:
- Export only at top level (no nested export)
- Cannot export impl blocks
- Trait impls exported with struct
- Main cannot be exported
- @server/@client work with export

**Backward Compatibility**:
- v0.3.0: Auto-export all (current)
- v0.3.1: Support export, warn without (transition)
- v0.4.0: Require export (breaking)

**Error Messages**: Designed helpful errors for common mistakes

**Implementation Checklist**: 10 concrete tasks
**Testing Plan**: Unit + integration tests specified

Phase 11 Progress: 2/11 tasks complete (18%)

**Next**: Task 3 - Test multi-file scenarios

🤖 Generated with [Claude Code](https://claude.com/claude-code)