@@ -317,61 +317,214 @@ use ../common/types;
 
 ---
 
-## Export Control (TO BE IMPLEMENTED)
+## Export Control Specification (Task 2 Design)
 
-### Current Behavior (Implicit Export)
+### Design Principles
+
+1. **Explicit Over Implicit**: Items must be explicitly marked `export` to be importable
+2. **JavaScript Compatibility**: Maps cleanly to ES6 `export` statements
+3. **Simplicity**: One keyword (`export`), clear semantics
+4. **Consistency**: Works the same for all item types
+
+### Syntax Specification
+
+#### Basic Export Syntax
 
 ```jounce
-// In math.jnc
-fn add(a: i64, b: i64) -> i64 {
-    return a + b;
+// Export a function
+export fn function_name(params) -> ReturnType {
+    // body
 }
 
-// AUTOMATICALLY EXPORTED (can be imported)
+// Export a struct
+export struct StructName {
+    field1: Type1,
+    field2: Type2,
+}
+
+// Export an enum
+export enum EnumName {
+    Variant1,
+    Variant2(Type),
+}
+
+// Export a constant
+export const CONSTANT_NAME: Type = value;
+
+// Export a type alias (future)
+export type AliasName = Type;
 ```
 
-### Future Behavior (Explicit Export)
+#### Private (Default) Behavior
 
 ```jounce
-// In math.jnc
+// Without 'export', items are private
+fn internal_helper() {
+    // NOT importable from other files
+}
 
-// Exported - can be imported by other files
+struct InternalData {
+    // NOT importable
+}
+
+const INTERNAL_CONFIG: i64 = 42;  // NOT importable
+```
+
+#### Re-export Syntax (Future)
+
+```jounce
+// Re-export from another module
+export use ./types::Point;
+export use ./utils::{add, multiply};
+
+// Re-export with rename
+export use ./http::HttpClient as Client;
+```
+
+### Grammar Rules
+
+#### Lexer Changes (token.rs)
+
+Add new token:
+```rust
+pub enum TokenKind {
+    // ... existing tokens ...
+    Export,  // 'export' keyword
+}
+```
+
+#### Parser Changes (parser.rs)
+
+Update item parsing:
+```rust
+fn parse_statement(&mut self) -> Result<Statement, CompileError> {
+    // Check for export modifier
+    let exported = self.consume_if_matches(&TokenKind::Export);
+
+    match self.current_token().kind {
+        TokenKind::Fn => {
+            let mut func = self.parse_function()?;
+            func.exported = exported;  // Mark as exported
+            Ok(Statement::Function(func))
+        }
+        TokenKind::Struct => {
+            let mut struct_def = self.parse_struct()?;
+            struct_def.exported = exported;
+            Ok(Statement::Struct(struct_def))
+        }
+        // ... other cases ...
+    }
+}
+```
+
+#### AST Changes (ast.rs)
+
+Add `exported` field to all exportable items:
+```rust
+pub struct FunctionDefinition {
+    pub name: Identifier,
+    pub exported: bool,  // NEW FIELD
+    // ... other fields ...
+}
+
+pub struct StructDefinition {
+    pub name: Identifier,
+    pub exported: bool,  // NEW FIELD
+    // ... other fields ...
+}
+
+pub struct EnumDefinition {
+    pub name: Identifier,
+    pub exported: bool,  // NEW FIELD
+    // ... other fields ...
+}
+
+pub struct ConstDeclaration {
+    pub name: Identifier,
+    pub exported: bool,  // NEW FIELD
+    // ... other fields ...
+}
+```
+
+### Module Resolution Rules
+
+#### Local File Import Resolution
+
+```jounce
+use ./file;              // Same directory
+use ./subdir/file;       // Subdirectory
+use ../parent/file;      // Parent directory
+use ../../file;          // Two levels up
+```
+
+**Resolution Algorithm**:
+1. Check if path starts with `.` or `..`
+2. If yes, resolve relative to importing file's directory:
+   ```
+   Current file: /project/src/components/Button.jnc
+   Import: use ./Header;
+   Resolved: /project/src/components/Header.jnc
+
+   Import: use ../utils/format;
+   Resolved: /project/src/utils/format.jnc
+   ```
+3. If no, treat as package import (existing behavior)
+
+#### Package Import Resolution (Existing)
+
+```jounce
+use jounce_http::HttpClient;
+```
+
+Resolves to: `aloha-shirts/jounce-http/src/lib.jnc`
+
+### JavaScript Code Generation
+
+#### Exported Function
+
+**Jounce**:
+```jounce
 export fn add(a: i64, b: i64) -> i64 {
     return a + b;
 }
+```
 
-// Private - only visible in this file
-fn internal_helper() {
-    // Cannot be imported
+**JavaScript**:
+```javascript
+export function add(a, b) {
+    return a + b;
 }
+```
 
-// Exported struct
+#### Private Function
+
+**Jounce**:
+```jounce
+fn internal_helper() {
+    console.log("Private");
+}
+```
+
+**JavaScript**:
+```javascript
+function internal_helper() {
+    console.log("Private");
+}
+// No 'export' keyword
+```
+
+#### Exported Struct
+
+**Jounce**:
+```jounce
 export struct Point {
     x: f64,
     y: f64,
 }
-
-// Private enum
-enum InternalState {
-    Ready,
-    Processing,
-}
 ```
 
-### JavaScript Output
-
+**JavaScript**:
 ```javascript
-// Exported function
-export function add(a, b) {
-    return a + b;
-}
-
-// Private function (no export)
-function internal_helper() {
-    // Not exported
-}
-
-// Exported class
 export class Point {
     constructor(x, y) {
         this.x = x;
@@ -379,6 +532,344 @@ export class Point {
     }
 }
 ```
+
+#### Exported Enum
+
+**Jounce**:
+```jounce
+export enum Status {
+    Success,
+    Error(String),
+}
+```
+
+**JavaScript**:
+```javascript
+export const Status = {
+    Success: { tag: "Success" },
+    Error: (msg) => ({ tag: "Error", value: msg })
+};
+```
+
+### Import/Export Examples
+
+#### Example 1: Simple Module
+
+**File**: `src/math.jnc`
+```jounce
+// Exported - can be imported
+export fn add(a: i64, b: i64) -> i64 {
+    return a + b;
+}
+
+export fn multiply(a: i64, b: i64) -> i64 {
+    return a * b;
+}
+
+// Private - cannot be imported
+fn validate_input(n: i64) -> bool {
+    return n >= 0;
+}
+
+export const MAX_VALUE: i64 = 1000;
+```
+
+**File**: `src/main.jnc`
+```jounce
+use ./math::{add, multiply, MAX_VALUE};
+
+fn main() {
+    let sum = add(5, 3);
+    let product = multiply(4, 7);
+    console.log("Sum: " + sum.to_string());
+    console.log("Max: " + MAX_VALUE.to_string());
+
+    // ERROR: validate_input is private
+    // let valid = validate_input(10);  // Compile error
+}
+```
+
+#### Example 2: Components Module
+
+**File**: `src/components/Button.jnc`
+```jounce
+export struct ButtonProps {
+    label: String,
+    onclick: fn(),
+}
+
+export fn Button(props: ButtonProps) -> JSX {
+    return <button onclick={props.onclick}>{props.label}</button>;
+}
+
+fn get_button_styles() -> String {
+    return "btn btn-primary";
+}
+```
+
+**File**: `src/components/Header.jnc`
+```jounce
+export fn Header(title: String) -> JSX {
+    return <header><h1>{title}</h1></header>;
+}
+```
+
+**File**: `src/components/mod.jnc` (Re-exports)
+```jounce
+// Re-export all components from single entry point
+export use ./Button::{Button, ButtonProps};
+export use ./Header::Header;
+```
+
+**File**: `src/main.jnc`
+```jounce
+// Import from mod.jnc (re-exports)
+use ./components::{Button, Header, ButtonProps};
+
+fn main() {
+    let app = (
+        <div>
+            <Header title="My App" />
+            <Button props={ButtonProps {
+                label: "Click me!",
+                onclick: || console.log("Clicked!")
+            }} />
+        </div>
+    );
+}
+```
+
+#### Example 3: Mixed Imports
+
+**File**: `src/app.jnc`
+```jounce
+// Package imports
+use jounce_http::HttpClient;
+use jounce_router::{Router, Route};
+
+// Local imports
+use ./components::{Button, Header};
+use ./api::fetch_users;
+use ./utils/format::format_date;
+
+export fn create_app() -> Router {
+    let router = Router::new();
+    router.add_route("/", home_page);
+    router.add_route("/users", users_page);
+    return router;
+}
+
+async fn users_page() -> JSX {
+    let client = HttpClient::new("https://api.example.com");
+    let users = fetch_users(client).await;
+    return render_users(users);
+}
+```
+
+### Edge Cases & Rules
+
+#### 1. Exported Items Must Be Top-Level
+
+**Valid**:
+```jounce
+export fn top_level() {
+    // OK
+}
+```
+
+**Invalid**:
+```jounce
+fn container() {
+    export fn nested() {  // ERROR: export only allowed at top level
+        // ...
+    }
+}
+```
+
+#### 2. Cannot Export Impl Blocks
+
+**Invalid**:
+```jounce
+export impl Point {  // ERROR: cannot export impl
+    fn distance(&self) -> f64 {
+        // ...
+    }
+}
+```
+
+**Valid** (export the struct, not the impl):
+```jounce
+export struct Point {
+    x: f64,
+    y: f64,
+}
+
+impl Point {  // Impl is always tied to the struct
+    fn distance(&self) -> f64 {
+        // Methods are accessible if struct is imported
+    }
+}
+```
+
+#### 3. Trait Implementations Are Always Exported
+
+If a struct is exported and implements a trait, the implementation is automatically available:
+
+```jounce
+export struct Point {
+    x: f64,
+    y: f64,
+}
+
+// Automatically exported with Point
+impl Display for Point {
+    fn to_string(&self) -> String {
+        return "(" + self.x.to_string() + ", " + self.y.to_string() + ")";
+    }
+}
+```
+
+#### 4. Main Function Cannot Be Exported
+
+```jounce
+fn main() {  // OK (entry point)
+    // ...
+}
+
+export fn main() {  // ERROR: main cannot be exported
+    // ...
+}
+```
+
+#### 5. Server/Client Annotations Work With Export
+
+```jounce
+@server
+export fn get_users() -> Vec<User> {
+    // Server-side function, exported for RPC
+}
+
+@client
+export fn render_ui() -> JSX {
+    // Client-side function
+}
+```
+
+### Backward Compatibility
+
+**Migration Strategy**:
+
+**Phase 1** (Current - v0.3.0):
+- All top-level items automatically exported
+- No breaking changes
+
+**Phase 2** (v0.3.1 - Transition):
+- Add `export` keyword support
+- Emit warnings for items without explicit export
+- Still export everything for compatibility
+
+**Phase 3** (v0.4.0 - Breaking):
+- Require explicit `export` keyword
+- Private by default
+- Breaking change for existing code
+
+**Migration Tool**:
+```bash
+jnc migrate --add-exports src/
+# Automatically adds 'export' to all top-level items
+```
+
+### Error Messages
+
+**Importing Private Item**:
+```
+Error: Cannot import 'internal_helper' from './math'
+  --> src/main.jnc:3:5
+   |
+ 3 | use ./math::internal_helper;
+   |     ^^^^^^^^^^^^^^^^^^^^^^^ item is not exported
+   |
+   = note: add 'export' keyword to make it importable:
+           export fn internal_helper() { ... }
+```
+
+**Export In Wrong Location**:
+```
+Error: 'export' keyword can only be used at module top level
+  --> src/utils.jnc:5:9
+   |
+ 5 |         export fn nested() {
+   |         ^^^^^^ export not allowed here
+   |
+   = note: move this function to top level
+```
+
+**Circular Dependency**:
+```
+Error: Circular module dependency detected
+  --> src/a.jnc:1:1
+   |
+ 1 | use ./b;
+   | ^^^^^^^^
+   |
+   = note: dependency chain: a.jnc → b.jnc → c.jnc → a.jnc
+```
+
+### Implementation Checklist
+
+- [ ] Add `Export` token to lexer (token.rs)
+- [ ] Add `exported: bool` field to AST nodes (ast.rs)
+- [ ] Parse `export` modifier in parser (parser.rs)
+- [ ] Update `extract_exports()` to check exported flag (module_loader.rs)
+- [ ] Generate `export` statements in JS emitter (js_emitter.rs)
+- [ ] Add error for invalid export locations
+- [ ] Add error for importing private items
+- [ ] Write 15+ tests for export behavior
+- [ ] Update documentation with examples
+- [ ] Create migration tool (optional)
+
+### Testing Plan
+
+**Unit Tests** (parser.rs):
+```rust
+#[test]
+fn test_parse_exported_function() {
+    // export fn add() -> i64
+}
+
+#[test]
+fn test_parse_private_function() {
+    // fn helper() (no export)
+}
+
+#[test]
+fn test_export_only_at_top_level() {
+    // Should error for nested export
+}
+```
+
+**Integration Tests** (test_exports.jnc):
+```jounce
+// Test file for export behavior
+
+export fn public_api() {
+    return "accessible";
+}
+
+fn private_helper() {
+    return "hidden";
+}
+
+// Try to import
+use ./test_exports::public_api;  // Should work
+use ./test_exports::private_helper;  // Should fail
+```
+
+---
+
+**Task 2 Status**: COMPLETE - Export keyword fully designed
+**Next**: Task 3 - Test multi-file scenarios
+**Lines Added**: 400+ lines of specification
 
 ---
 
